data/derived/sp14/progs/unify/prog3474.ml.out
Characters 68-71:
  let fixpoint (f,b) = if (wwhile (f, b) = b) then b else (wwhile (f, f b));;
                                                                      ^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * bool
